--- a/css/resume.css
+++ b/css/resume.css
@@ -90,7 +90,7 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: #d48a6e;
+  outline-color: rgb(21, 10, 121);
 }
 
 @media (min-width: 992px) {
@@ -160,7 +160,7 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: rgb(16, 119, 133) !important;
 }
 
 .text-primary {
